force-app/main/default/objects/Product_Sourcing_Option__c/Product_Sourcing_Option__c.object-meta.xml
<CustomObject>
        <label>Product Sourcing Option</label>
    <nameField>
        <label>Sourcing Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sourcing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>