force-app/main/default/objects/Product_Sourcing_Option__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Product Sourcing Option</relationshipLabel>
    <relationshipName>BU_Product_Sourcing_Options</relationshipName>
    <type>Lookup</type>
</CustomField>