force-app/main/default/objects/Product_Sourcing_Option__c/fields/Contract_Cost_Per_Vendor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cost_Per_Vendor_Unit__c</fullName>
    <description>BU-specific contracted cost per vendor unit.</description>
    <label>Contract Cost Per Vendor Unit</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>