force-app/main/default/objects/Product_Sourcing_Option__c/fields/Contract_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Discount_Percent__c</fullName>
    <description>Optional percentage discount from base cost for this BU Vendor Product.</description>
    <label>Contract Discount (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>