force-app/main/default/objects/Product_Sourcing_Option__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Start date for BU-specific vendor contract terms.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>