force-app/main/default/objects/Product_Sourcing_Option__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>End date for BU-specific vendor contract terms.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>