force-app/main/default/objects/Product_Sourcing_Option__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this BU Vendor Product is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>