force-app/main/default/objects/Product_Sourcing_Option__c/fields/Preferred_Rank__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Rank__c</fullName>
    <description>Rank of preference for this vendor product within the Business Unit (1 = most preferred).</description>
    <label>Preferred Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>