force-app/main/default/objects/Product_Sourcing_Option__c/fields/Vendor_Product__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor Product available to this Business Unit.</description>
    <label>Vendor Product</label>
    <referenceTo>Vendor_Product__c</referenceTo>
    <relationshipLabel>Product Sourcing Option</relationshipLabel>
    <relationshipName>Vendor_Products_Product_Sourcing_Option</relationshipName>
    <type>Lookup</type>
</CustomField>